# ComfyUI_Fens_Simple_Nodes

./: .gitignore  README.md  __init__.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-pipeline.yml  publish_node.yml
locales/en/: main.json  nodeDefs.json
locales/zh-CN/: main.json  nodeDefs.json
nodes/: FensTokenCounter.py  OptiEmptyLatent.py  OptiEmptyLatentAdvanced.py  fens_token_counter.py  latent_common.py  latent_utils.py  model_config.yaml  opti_empty_latent.py  opti_empty_latent_advanced.py
src/FensTokenCounter/: FensTokenCounter.py  encoder_mapping.py
web/docs/FensTokenCounter/: en.md
web/docs/OptiEmptyLatent/: en.md
web/docs/OptiEmptyLatentAdvanced/: en.md
