[project]
name = "ComfyUI_Fens_Simple_Nodes"
description = "Simple nodes for ComfyUI - Token Counter - Optimal Empty Latent"
version = "0.0.6"
readme = "README.md"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/Taithrah/ComfyUI_Fens_Simple_Nodes"
bugs = "https://github.com/Taithrah/ComfyUI_Fens_Simple_Nodes/issues"
homepage = "https://github.com/Taithrah/ComfyUI_Fens_Simple_Nodes"

[tool.comfy]
PublisherId = "taithrah"
DisplayName = "Fens-Simple-Nodes"
Icon = ""
