[project]
name = "comfyui_fens_simple_nodes"
description = "Simple nodes for ComfyUI - Token Counter - Optimal Empty Latent"
version = "1.5.1"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [{ name = "Taithrah", email = "taithrah@users.noreply.github.com" }]
maintainers = [{ name = "Taithrah" }]

[project.urls]
Repository = "https://github.com/Taithrah/ComfyUI_Fens_Simple_Nodes"
bugs = "https://github.com/Taithrah/ComfyUI_Fens_Simple_Nodes/issues"
homepage = "https://github.com/Taithrah/ComfyUI_Fens_Simple_Nodes"

[tool.comfy]
PublisherId = "taithrah"
DisplayName = "Fens-Simple-Nodes"
Icon = ""

[tool.ruff]
line-length = 88
target-version = "py310"
fix = true
exclude = ["*.ipynb", "**/generated/*.pyi"]

[tool.ruff.lint]
select = [
    "F",   # Pyflakes (Logic errors)
    "E",   # Pycodestyle (Standard style)
    "W",   # Pycodestyle (Warnings)
    "I",   # Isort
    "N",   # Pep8-naming 
    "UP",  # Pyupgrade
    "B",   # Bugbear
    "S",   # Bandit (Security checks - prevents eval/exec)
    "SIM", # Simplify
    "ARG", # Unused arguments check
    "PL",  # Pylint
]

ignore = [
    "E501",    # Let Black handle line length, don't yell about it
    "PLR0913", # Allow >5 arguments in functions, sometimes necessary
    "D100",    # Don't require docstrings for every single file
]

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = false

[tool.bandit]
skips = ["B101"]
